--- a/index.html
+++ b/index.html
@@ -1,185 +1,164 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>Panel Sondas T</title>
-<script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Panel sondas T</title>
+
 <style>
-body {
-  background-color: #e0e0e0;
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 20px;
-}
-h1 { text-align:center; color:#333; margin-bottom:20px; }
-#resumen {
-  display:flex;
-  justify-content: space-around;
-  margin-bottom: 30px;
-  font-weight:bold;
-}
-.bloque {
-  display:grid;
-  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-  gap: 20px;
-  margin-bottom: 30px;
-}
-.sonda {
-  background-color:#fff;
-  border-radius:12px;
-  box-shadow:0 4px 12px rgba(0,0,0,0.25); /* Sombra reforzada */
-  padding:15px;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  transition: transform 0.3s, border 0.3s, opacity 0.3s;
-}
-.sonda:hover { transform: translateY(-5px); }
-.sonda.desactivada { opacity:0.4; }
-.sonda h2 { margin:0; font-size:1.1em; color:#555; margin-bottom:5px; text-align:center; }
-canvas { width:80px !important; height:80px !important; margin-bottom:2px; }
-.valor { font-size:0.75em; font-weight:bold; color:#333; text-align:center; margin-bottom:2px; }
-.nombreVar { font-size:0.65em; color:#666; margin-bottom:5px; }
-.alerta {
-  background-color:#ff4d4d;
-  color:#fff;
-  font-weight:bold;
-  padding:5px 10px;
-  border-radius:8px;
-  display:none;
-  text-align:center;
-  width:100%;
-  margin-top:5px;
-}
-.toggle { margin-bottom:5px; }
+    body{
+        font-family: Arial;
+        background:#f0f3f7;
+        padding:20px;
+    }
+
+    h1{
+        font-size:28px;
+        margin-bottom:20px;
+    }
+
+    .grid{
+        display:grid;
+        grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+        gap:18px;
+    }
+
+    .card{
+        background:white;
+        padding:20px;
+        border-radius:14px;
+        box-shadow:0 4px 12px rgba(0,0,0,.15);
+        border:4px solid transparent;
+        transition:0.3s;
+    }
+
+    .alerta{
+        border-color:red!important;
+    }
+
+    .chart{
+        height:120px;
+        display:flex;
+        align-items:flex-end;
+        justify-content:center;
+        gap:1px;
+    }
+
+    .barTemp{
+        width:14px;
+        border-radius:4px;
+        transition:0.5s;
+    }
+    .barHum{
+        width:14px;
+        background:#4DB6FF;
+        border-radius:4px;
+    }
+
+    .label{
+        text-align:center;
+        margin-top:8px;
+        font-size:14px;
+        font-weight:bold;
+    }
 </style>
+
 </head>
 <body>
-<h1>Panel Sondas T</h1>
-<div id="resumen">
-  <div>Sondas activas: <span id="numActivas">0</span></div>
-  <div>Alertas: <span id="numAlertas">0</span></div>
-  <div>Temp. promedio: <span id="promTemp">0</span>°C</div>
-  <div>Humedad promedio: <span id="promHum">0</span>%</div>
-</div>
-<div id="bloques-container"></div>
 
-<script defer>
-document.addEventListener('DOMContentLoaded', function(){
-  const totalSondas = 5;
-  const bloquesContainer = document.getElementById('bloques-container');
-  const sondasActivas = Array(totalSondas).fill(true);
-  const chartsTemp = [];
-  const chartsHum = [];
-  const valoresPrueba = Array.from({length: totalSondas}, () => ({
-    Temperatura_C: Math.floor(Math.random()*10 + 20),
-    Humedad_pct: Math.floor(Math.random()*30 + 40),
-    Distancia_mm: Math.floor(Math.random()*20 + 25)
-  }));
+<h1>Panel sondas T</h1>
 
-  function getColorTemp(value){
-    return value<25 ? '#00ff00' : value<30 ? '#ffff00' : '#ff0000';
-  }
-  function getColorHum(value){
-    return value<50 ? '#36cce7' : value<60 ? '#00bfff' : '#ff0000';
-  }
+<div class="grid" id="grid"></div>
 
-  function actualizarResumen(){
-    let activas=0, alertas=0, sumTemp=0, sumHum=0;
-    for(let i=0;i<totalSondas;i++){
-      if(!sondasActivas[i]) continue;
-      activas++;
-      sumTemp += chartsTemp[i].data.datasets[0].data[0];
-      sumHum += chartsHum[i].data.datasets[0].data[0];
-      if(parseInt(document.getElementById(`dist-${i+1}`).innerText)>30) alertas++;
+
+<script>
+//////////////////////////////////////////////////////////////////////////////////
+// CONFIGURACIÓN
+//////////////////////////////////////////////////////////////////////////////////
+const limiteMin = 10;   // mm
+const limiteOk  = 40;   // mm  (hasta aquí OK)
+const limiteAlarma = 40;// >40mm alerta
+//////////////////////////////////////////////////////////////////////////////////
+
+const sondas = [
+    {id:1, temp:22, hum:55, distancia:15},
+    {id:2, temp:24, hum:57, distancia:20},
+    {id:3, temp:26, hum:60, distancia:38},
+    {id:4, temp:23, hum:58, distancia:45}, // alarma
+    {id:5, temp:25, hum:52, distancia:48}  // alarma
+]
+
+// temperatura color degradado
+function colorTemp(t){
+    if(t<22) return "#22dd22";
+    if(t<26) return "orange";
+    return "red";
+}
+
+function draw(){
+    const g=document.getElementById("grid");
+    g.innerHTML="";
+
+    sondas.forEach(s=>{
+        let card=document.createElement("div");
+        card.className="card";
+        
+        // alerta distancia
+        if(s.distancia>limiteAlarma){
+            card.classList.add("alerta");
+        }
+
+        card.innerHTML=`
+            <h3>Sonda ${s.id}</h3>
+
+            <div style="display:flex;gap:8px; margin-top:12px;">
+                <div>
+                    <div class="chart" id="temp${s.id}"></div>
+                    <div class="label">Temp: ${s.temp}°C</div>
+                </div>
+                <div>
+                    <div class="chart" id="hum${s.id}"></div>
+                    <div class="label">Hum: ${s.hum}%</div>
+                </div>
+            </div>
+
+            <div style="margin-top:15px;font-size:14px;">
+              Distancia: <b>${s.distancia} mm</b>
+            </div>
+        `;
+
+        g.appendChild(card);
+
+        drawTemp("temp"+s.id, s.temp );
+        drawHum("hum"+s.id, s.hum );
+    })
+}
+
+function drawTemp(id,val){
+    let cont=document.getElementById(id);
+    cont.innerHTML="";
+    for(let i=0;i<10;i++){
+        let b=document.createElement("div");
+        b.className="barTemp";
+        b.style.height= (i<val/3?"100%":"10px");
+        b.style.background=colorTemp(val);
+        cont.appendChild(b);
     }
-    document.getElementById('numActivas').innerText = activas;
-    document.getElementById('numAlertas').innerText = alertas;
-    document.getElementById('promTemp').innerText = activas?Math.round(sumTemp/activas):0;
-    document.getElementById('promHum').innerText = activas?Math.round(sumHum/activas):0;
-  }
+}
 
-  for(let i=1;i<=totalSondas;i++){
-    const sondaDiv = document.createElement('div');
-    sondaDiv.classList.add('sonda');
-    sondaDiv.id = `sonda-${i}`;
-    sondaDiv.innerHTML = `
-      <h2>Sonda ${i}</h2>
-      <label class="toggle">Activo <input type="checkbox" id="toggle-${i}" checked></label>
-      <canvas id="tempChart-${i}"></canvas>
-      <div class="nombreVar">Temperatura</div>
-      <div class="valor" id="valorTemp-${i}"></div>
-      <canvas id="humChart-${i}"></canvas>
-      <div class="nombreVar">Humedad</div>
-      <div class="valor" id="valorHum-${i}"></div>
-      <div class="valor">Distancia: <span id="dist-${i}"></span> mm</div>
-      <div class="alerta" id="alerta-${i}">¡Alerta de termitas!</div>
-    `;
-    bloquesContainer.appendChild(sondaDiv);
-
-    const toggle = sondaDiv.querySelector(`#toggle-${i}`);
-    toggle.addEventListener('change', ()=> {
-      sondasActivas[i-1] = toggle.checked;
-      sondaDiv.classList.toggle('desactivada', !toggle.checked);
-      actualizarResumen();
-    });
-
-    // Gráfico Temperatura
-    const ctxTemp = document.getElementById(`tempChart-${i}`).getContext('2d');
-    const tempChart = new Chart(ctxTemp,{
-      type:'doughnut',
-      data:{
-        labels:['Temp','Resto'],
-        datasets:[{data:[valoresPrueba[i-1].Temperatura_C,50], backgroundColor:[getColorTemp(valoresPrueba[i-1].Temperatura_C),'#eee'], borderWidth:0}]
-      },
-      options:{ cutout:'70%', rotation:-90, circumference:180, plugins:{legend:{display:false}} }
-    });
-    chartsTemp.push(tempChart);
-    document.getElementById(`valorTemp-${i}`).innerText = valoresPrueba[i-1].Temperatura_C+'°C';
-
-    // Gráfico Humedad
-    const ctxHum = document.getElementById(`humChart-${i}`).getContext('2d');
-    const humChart = new Chart(ctxHum,{
-      type:'doughnut',
-      data:{
-        labels:['Hum','Resto'],
-        datasets:[{data:[valoresPrueba[i-1].Humedad_pct,100-valoresPrueba[i-1].Humedad_pct], backgroundColor:[getColorHum(valoresPrueba[i-1].Humedad_pct),'#eee'], borderWidth:0}]
-      },
-      options:{ cutout:'70%', rotation:-90, circumference:180, plugins:{legend:{display:false}} }
-    });
-    chartsHum.push(humChart);
-    document.getElementById(`valorHum-${i}`).innerText = valoresPrueba[i-1].Humedad_pct+'%';
-
-    // Distancia inicial
-    document.getElementById(`dist-${i}`).innerText = valoresPrueba[i-1].Distancia_mm;
-    document.getElementById(`alerta-${i}`).style.display = valoresPrueba[i-1].Distancia_mm>30?'block':'none';
-  }
-
-  setInterval(()=>{
-    for(let i=0;i<totalSondas;i++){
-      if(!sondasActivas[i]) continue;
-      const temp = Math.floor(Math.random()*10+20);
-      const hum = Math.floor(Math.random()*30+40);
-      const dist = Math.floor(Math.random()*20+25);
-
-      chartsTemp[i].data.datasets[0].data[0] = temp;
-      chartsTemp[i].data.datasets[0].backgroundColor[0] = getColorTemp(temp);
-      chartsTemp[i].update();
-      document.getElementById(`valorTemp-${i+1}`).innerText = temp+'°C';
-
-      chartsHum[i].data.datasets[0].data[0] = hum;
-      chartsHum[i].data.datasets[0].backgroundColor[0] = getColorHum(hum);
-      chartsHum[i].update();
-      document.getElementById(`valorHum-${i+1}`).innerText = hum+'%';
-
-      document.getElementById(`dist-${i+1}`).innerText = dist;
-      document.getElementById(`alerta-${i+1}`).style.display = dist>30?'block':'none';
+function drawHum(id,val){
+    let cont=document.getElementById(id);
+    cont.innerHTML="";
+    for(let i=0;i<10;i++){
+        let b=document.createElement("div");
+        b.className="barHum";
+        b.style.height= (i<val/10?"100%":"10px");
+        cont.appendChild(b);
     }
-    actualizarResumen();
-  },5000);
+}
 
-  actualizarResumen();
-});
+draw();
 </script>
+
 </body>
 </html>
